--- a/package.json
+++ b/package.json
@@ -7,61 +7,65 @@
     "android": "expo start --android",
     "ios": "expo start --ios",
     "web": "expo start --web",
-    "eject": "expo eject"
+    "eject": "expo eject",
+    "postinstall": "patch-package"
   },
   "dependencies": {
-    "@expo/webpack-config": "~0.16.21",
+    "@expo/config-plugins": "^5.0.0",
+    "@expo/webpack-config": "^0.16.23",
     "@gorhom/bottom-sheet": "^4.3.2",
     "@hookform/resolvers": "^2.9.3",
-    "@react-native-community/datetimepicker": "6.1.2",
+    "@react-native-community/datetimepicker": "6.2.0",
     "@react-native-masked-view/masked-view": "0.2.6",
     "@react-navigation/bottom-tabs": "^6.3.1",
     "@react-navigation/native": "^6.0.10",
     "@react-navigation/stack": "^6.2.1",
-    "expo": "^45.0.6",
-    "expo-build-properties": "~0.2.0",
-    "expo-camera": "~12.2.0",
-    "expo-dev-client": "^1.0.0",
-    "expo-font": "~10.1.0",
-    "expo-image-picker": "~13.1.1",
-    "expo-linear-gradient": "~11.3.0",
-    "expo-linking": "~3.1.0",
-    "expo-media-library": "~14.1.0",
-    "expo-modules-autolinking": "^0.9.0",
-    "expo-splash-screen": "~0.15.1",
-    "expo-status-bar": "~1.3.0",
-    "expo-updates": "~0.13.2",
+    "expo": "^46.0.0-beta.6",
+    "expo-build-properties": "~0.3.0",
+    "expo-camera": "~12.3.0",
+    "expo-dev-client": "~1.1.0",
+    "expo-font": "~10.2.0",
+    "expo-image-picker": "~13.3.0",
+    "expo-linear-gradient": "~11.4.0",
+    "expo-linking": "~3.2.1",
+    "expo-media-library": "~14.2.0",
+    "expo-modules-autolinking": "~0.10.0",
+    "expo-splash-screen": "~0.16.1",
+    "expo-status-bar": "~1.4.0",
+    "expo-updates": "~0.14.2",
     "nanoid": "^4.0.0",
     "native-base": "^3.4.7",
-    "react": "17.0.2",
-    "react-dom": "17.0.2",
+    "patch-package": "^6.4.7",
+    "postinstall-postinstall": "^2.1.0",
+    "react": "18.0.0",
+    "react-dom": "18.0.0",
     "react-hook-form": "^7.33.0",
-    "react-native": "0.68.2",
+    "react-native": "0.69.1",
     "react-native-animated-pagination-dots": "^0.1.72",
-    "react-native-gesture-handler": "~2.2.1",
+    "react-native-gesture-handler": "~2.5.0",
     "react-native-get-random-values": "~1.8.0",
     "react-native-loading-spinner-overlay": "^3.0.0",
-    "react-native-pager-view": "5.4.15",
-    "react-native-reanimated": "~2.8.0",
-    "react-native-safe-area-context": "4.2.4",
-    "react-native-screens": "~3.11.1",
+    "react-native-pager-view": "5.4.24",
+    "react-native-reanimated": "~2.9.1",
+    "react-native-safe-area-context": "4.3.1",
+    "react-native-screens": "~3.15.0",
     "react-native-svg": "12.3.0",
     "react-native-toast-message": "^2.1.5",
-    "react-native-web": "0.17.7",
+    "react-native-web": "~0.18.7",
     "slugify": "^1.6.5",
     "styled-components": "^5.3.5",
     "styled-system": "^5.1.5",
     "zod": "^3.17.3"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.9",
+    "@babel/core": "^7.18.6",
     "@babel/preset-env": "^7.16.8",
     "@babel/preset-typescript": "^7.16.7",
     "@commitlint/config-conventional": "^16.0.0",
     "@react-native-community/eslint-config": "^3.0.3",
     "@release-it/conventional-changelog": "^5.0.0",
-    "@types/react": "~17.0.21",
-    "@types/react-native": "~0.67.6",
+    "@types/react": "~18.0.0",
+    "@types/react-native": "~0.69.1",
     "@types/react-native-loading-spinner-overlay": "^0.5.3",
     "@types/styled-components": "^5.1.25",
     "@types/styled-components-react-native": "^5.1.3",
@@ -82,7 +86,7 @@
     "stylelint-config-react-native-styled-components": "^0.5.0",
     "stylelint-processor-styled-components": "^1.10.0",
     "stylelint-react-native": "^2.4.0",
-    "typescript": "^4.7.4"
+    "typescript": "^4.6.3"
   },
   "private": true
 }
