build: upgrade to release version of expo 46

--- a/package.json
+++ b/package.json
@@ -20,19 +20,19 @@
     "@react-navigation/bottom-tabs": "^6.3.1",
     "@react-navigation/native": "^6.0.10",
     "@react-navigation/stack": "^6.2.1",
-    "expo": "^46.0.0-beta.6",
+    "expo": "^46.0.1",
     "expo-build-properties": "~0.3.0",
     "expo-camera": "~12.3.0",
     "expo-dev-client": "~1.1.0",
     "expo-font": "~10.2.0",
-    "expo-image-picker": "~13.3.0",
+    "expo-image-picker": "~13.3.1",
     "expo-linear-gradient": "~11.4.0",
-    "expo-linking": "~3.2.1",
+    "expo-linking": "~3.2.2",
     "expo-media-library": "~14.2.0",
-    "expo-modules-autolinking": "~0.10.0",
+    "expo-modules-autolinking": "~0.10.1",
     "expo-splash-screen": "~0.16.1",
     "expo-status-bar": "~1.4.0",
-    "expo-updates": "~0.14.2",
+    "expo-updates": "~0.14.3",
     "nanoid": "^4.0.0",
     "native-base": "^3.4.7",
     "patch-package": "^6.4.7",
@@ -40,7 +40,7 @@
     "react": "18.0.0",
     "react-dom": "18.0.0",
     "react-hook-form": "^7.33.0",
-    "react-native": "0.69.1",
+    "react-native": "0.69.3",
     "react-native-animated-pagination-dots": "^0.1.72",
     "react-native-gesture-handler": "~2.5.0",
     "react-native-get-random-values": "~1.8.0",
