--- a/package.json
+++ b/package.json
@@ -11,8 +11,6 @@
     "postinstall": "patch-package"
   },
   "dependencies": {
-    "@expo/config-plugins": "^5.0.0",
-    "@expo/webpack-config": "^0.16.23",
     "@gorhom/bottom-sheet": "^4.3.2",
     "@hookform/resolvers": "^2.9.3",
     "@react-native-community/datetimepicker": "6.2.0",
@@ -23,7 +21,7 @@
     "expo": "^46.0.1",
     "expo-build-properties": "~0.3.0",
     "expo-camera": "~12.3.0",
-    "expo-dev-client": "~1.1.0",
+    "expo-dev-client": "^1.1.1",
     "expo-font": "~10.2.0",
     "expo-image-picker": "~13.3.1",
     "expo-linear-gradient": "~11.4.0",
