--- a/package.json
+++ b/package.json
@@ -7,53 +7,24 @@
     "android": "expo start --android",
     "ios": "expo start --ios",
     "web": "expo start --web",
-    "eject": "expo eject",
-    "postinstall": "patch-package"
+    "eject": "expo eject"
   },
   "dependencies": {
-    "@gorhom/bottom-sheet": "^4.3.2",
-    "@hookform/resolvers": "^2.9.3",
-    "@react-native-community/datetimepicker": "6.2.0",
     "@react-native-masked-view/masked-view": "0.2.6",
-    "@react-navigation/bottom-tabs": "^6.3.1",
-    "@react-navigation/native": "^6.0.10",
-    "@react-navigation/stack": "^6.2.1",
     "expo": "^46.0.1",
     "expo-build-properties": "~0.3.0",
-    "expo-camera": "~12.3.0",
     "expo-dev-client": "^1.1.1",
-    "expo-font": "~10.2.0",
-    "expo-image-picker": "~13.3.1",
-    "expo-linear-gradient": "~11.4.0",
-    "expo-linking": "~3.2.2",
     "expo-media-library": "~14.2.0",
     "expo-modules-autolinking": "~0.10.1",
     "expo-splash-screen": "~0.16.1",
     "expo-status-bar": "~1.4.0",
     "expo-updates": "~0.14.3",
-    "nanoid": "^4.0.0",
-    "native-base": "^3.4.7",
-    "patch-package": "^6.4.7",
-    "postinstall-postinstall": "^2.1.0",
     "react": "18.0.0",
     "react-dom": "18.0.0",
-    "react-hook-form": "^7.33.0",
     "react-native": "0.69.3",
-    "react-native-animated-pagination-dots": "^0.1.72",
     "react-native-gesture-handler": "~2.5.0",
-    "react-native-get-random-values": "~1.8.0",
-    "react-native-loading-spinner-overlay": "^3.0.0",
-    "react-native-pager-view": "5.4.24",
     "react-native-reanimated": "~2.9.1",
-    "react-native-safe-area-context": "4.3.1",
-    "react-native-screens": "~3.15.0",
-    "react-native-svg": "12.3.0",
-    "react-native-toast-message": "^2.1.5",
-    "react-native-web": "~0.18.7",
-    "slugify": "^1.6.5",
-    "styled-components": "^5.3.5",
-    "styled-system": "^5.1.5",
-    "zod": "^3.17.3"
+    "react-native-web": "~0.18.7"
   },
   "devDependencies": {
     "@babel/core": "^7.18.6",
@@ -61,29 +32,16 @@
     "@babel/preset-typescript": "^7.16.7",
     "@commitlint/config-conventional": "^16.0.0",
     "@react-native-community/eslint-config": "^3.0.3",
-    "@release-it/conventional-changelog": "^5.0.0",
     "@types/react": "~18.0.0",
     "@types/react-native": "~0.69.1",
-    "@types/react-native-loading-spinner-overlay": "^0.5.3",
-    "@types/styled-components": "^5.1.25",
-    "@types/styled-components-react-native": "^5.1.3",
     "@typescript-eslint/eslint-plugin": "^5.29.0",
     "@typescript-eslint/parser": "^5.29.0",
-    "commitlint": "^17.0.3",
     "eslint": "^8.18.0",
     "eslint-plugin-import": "^2.26.0",
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-react": "^7.30.1",
     "eslint-plugin-react-native": "^4.0.0",
-    "husky": "^8.0.1",
-    "lint-staged": "^13.0.3",
     "prettier": "^2.4.1",
-    "react-native-svg-transformer": "^1.0.0",
-    "release-it": "^15.0.0",
-    "stylelint": "^14.9.1",
-    "stylelint-config-react-native-styled-components": "^0.5.0",
-    "stylelint-processor-styled-components": "^1.10.0",
-    "stylelint-react-native": "^2.4.0",
     "typescript": "^4.6.3"
   },
   "private": true
